catkin_ws/logs/backend/build.make.179.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp: In member function ‘virtual bool SLAM::SURF::match(const std::vector<cv::KeyPoint>&, const cv::Mat&, const std::vector<cv::KeyPoint>&, const cv::Mat&, std::vector<cv::DMatch>&) const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:84:23: error: ‘matchesIdx1’ was not declared in this scope
  if (static_cast<int>(matchesIdx1.size()) < minNrOfMatches)
                       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:89:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make[2]: *** [CMakeFiles/frontend.dir/src/SURF.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:282:60: error: ‘matchesIdx1’ was not declared in this scope
   validTrafo = tme->estimateTrafo(frame1.getKeypoints3D(), matchesIdx1, frame2.getKeypoints3D(), matchesIdx2, tm, informationMatrix);
                                                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:282:98: error: ‘matchesIdx2’ was not declared in this scope
   validTrafo = tme->estimateTrafo(frame1.getKeypoints3D(), matchesIdx1, frame2.getKeypoints3D(), matchesIdx2, tm, informationMatrix);
                                                                                                  ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
